# evernote-plus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: release_github.yml  release_pypi.yml
evernote/edam/error/: ttypes.py
evernote/edam/limits/: constants.py
evernote/edam/notestore/: NoteStore.py  ttypes.py
evernote/edam/type/: constants.py  ttypes.py
evernote/edam/userstore/: UserStore.py  constants.py  ttypes.py
